--- a/package.json
+++ b/package.json
@@ -14,30 +14,28 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.2.4",
 		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.9.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.1",
+		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@types/eslint-config-prettier": "^6.11.3",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.0.0-next.72",
+		"bits-ui": "^1.0.0-next.76",
 		"clsx": "^2.1.1",
-		"eslint": "^9.16.0",
+		"eslint": "^9.17.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.13.0",
+		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.2",
 		"prettier-plugin-tailwindcss": "^0.6.9",
-		"svelte": "^5.8.1",
+		"svelte": "^5.16.1",
 		"svelte-check": "^4.1.1",
-		"tailwind-merge": "^2.5.5",
+		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.16",
+		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.17.0",
-		"vite": "^6.0.3"
-	},
-	"dependencies": {
+		"typescript-eslint": "^8.19.0",
+		"vite": "^6.0.7",
 		"mode-watcher": "^0.5.0"
 	}
 }
